# Exasol_Challenge

./: .gitignore  BUILD.md  CMakeLists.txt  KT_DOCUMENT.md  Makefile  README.md  SOLID_PRINCIPLES.md  build.bat  build.sh  cmake-build.bat  cmake-build.sh
config/: client.conf
include/: CLIConfigLoader.h  ExasolClient.h  FileConfigLoader.h  IConfigLoader.h  ISSLManager.h  ISocketManager.h  SSLManager.h  SocketManager.h
pemfiles/: client-cert.pem  client-key.pem
src/: CLIConfigLoader.cpp  ExasolClient.cpp  FileConfigLoader.cpp  SSLManager.cpp  SocketManager.cpp  client_old.bak  main.cpp
